# cathode_relithiation_project

./: .gitignore  README.md  pyproject.toml  tatus  tree.txt  uma_full_completed_50282412.err
default_structures/electrolyte_templates/: H2O.cif  K.cif  Li.cif  OH.cif  README.md
docs/: architecture.md  electrode_structure_generation.md  uma_finetune_vasp_workflow.md  uma_torchsim_chem_potential_workflow.md  uma_torchsim_screen.md
examples/: electrode_generation_lco_lioh.yaml
examples/uma_torchsim_screen/: config.yaml  electrode_manifest.example.csv  electrolyte_manifest.example.csv  experimental_rates.example.csv
manifests/: electrolyte_manifest.csv  electrolyte_manifest.mid.csv  electrolyte_manifest.one.csv  electrolyte_manifest.smoke.csv  electrolyte_manifest.smoke_edges_mid.csv
results/publication/default_systems/electrode/LCO_mp-22526/classical_forcefield/POSCAR_directory/: POSCAR_000451  POSCAR_000462  POSCAR_000473  POSCAR_000501  POSCAR_000514  POSCAR_000546  POSCAR_000573
results/publication/default_systems/electrode/LCO_mp-22526/structure_generation/T_393K/lith_100.00pct/: POSCAR_000130  POSCAR_000131  POSCAR_000132  POSCAR_000133  POSCAR_000134  POSCAR_000135  POSCAR_000136  POSCAR_000137  POSCAR_000138  POSCAR_000139  POSCAR_000140  POSCAR_000141  POSCAR_000142  POSCAR_000143  POSCAR_000144  POSCAR_000145  POSCAR_000146  POSCAR_000147  POSCAR_000148  POSCAR_000149  POSCAR_000150
results/publication/default_systems/electrode/LCO_mp-22526/structure_generation/T_393K/lith_74.07pct/: POSCAR_000001  POSCAR_000002  POSCAR_000003  POSCAR_000004  POSCAR_000005  POSCAR_000006  POSCAR_000007  POSCAR_000008  POSCAR_000009  POSCAR_000010  POSCAR_000011  POSCAR_000012  POSCAR_000013  POSCAR_000014  POSCAR_000015  POSCAR_000016  POSCAR_000017  POSCAR_000018  POSCAR_000019  POSCAR_000020  POSCAR_000021  POSCAR_000022  POSCAR_000023  POSCAR_000024  POSCAR_000025  POSCAR_000026  POSCAR_000027  POSCAR_000028  POSCAR_000029  (+41 more)
results/publication/default_systems/electrolyte/LiOH_KOH_H2O/classical_forcefield/final_data_files/: data.LiOH_0p0_KOH_4p0_seed01  data.LiOH_0p2_KOH_3p8_seed01  data.LiOH_0p4_KOH_3p6_seed01  data.LiOH_0p6_KOH_3p4_seed01  data.LiOH_0p8_KOH_3p2_seed01  data.LiOH_1p0_KOH_3p0_seed01  data.LiOH_1p2_KOH_2p8_seed01  data.LiOH_1p4_KOH_2p6_seed01  data.LiOH_1p6_KOH_2p4_seed01  data.LiOH_1p8_KOH_2p2_seed01  data.LiOH_2p0_KOH_2p0_seed01  data.LiOH_2p2_KOH_1p8_seed01  data.LiOH_2p4_KOH_1p6_seed01  data.LiOH_2p6_KOH_1p4_seed01  data.LiOH_2p8_KOH_1p2_seed01  data.LiOH_3p0_KOH_1p0_seed01  data.LiOH_3p2_KOH_0p8_seed01  data.LiOH_3p4_KOH_0p6_seed01  data.LiOH_3p6_KOH_0p4_seed01  data.LiOH_3p8_KOH_0p2_seed01  data.LiOH_4p0_KOH_0p0_seed01
scripts/: plot_live_md_thermo_by_lithiation.py  run_2pt_python_from_export.py
scripts/slurm/perlmutter/: run_analysis.sbatch  run_electrode_md.sbatch  run_electrolyte_md.sbatch  run_export2pt.sbatch
src/hydrorelith/: cli.py
src/hydrorelith/analysis/: __init__.py  uma_torchsim_descriptors.py  uma_torchsim_plots.py  uma_torchsim_regression.py
src/hydrorelith/config/: __init__.py  defaults.py  schemas.py
src/hydrorelith/io/: __init__.py  structure_manifest.py  torchsim_export2pt.py
src/hydrorelith/pipelines/: electrode_structure_generation.py  electrode_vasp_workflow.py  electrolyte_structure_generation.py  electrolyte_vasp_workflow.py  scf_parallelization_benchmark.py  uma_finetune_vasp_workflow.py  uma_torchsim_2pt_experiment.py  uma_torchsim_chem_potential_workflow.py  uma_torchsim_screen.py  uma_torchsim_screen_config.py  uma_torchsim_screen_models.py  uma_torchsim_screen_run.py  uma_water_2pt_experiment.py
tests/: test_torchsim_export2pt.py  test_uma_finetune_vasp_workflow_split.py  test_uma_torchsim_chem_potential_workflow.py  test_uma_torchsim_runner_helpers.py  test_uma_torchsim_screen_smoke.py  test_uma_water_2pt_experiment.py
(+509 files in other folders)
