[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrothermal-relithiation-workflows"
version = "0.1.0"
description = "Computational workflows for hydrothermal cathode relithiation experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy<2",
  "scikit-learn>=1.6.1",
  "matplotlib",
  "tqdm",
  "ase",
  "pymatgen",
  "hiphive",
  "fairchem-core",
  "matgl>=2.0.0",
  "torch>=2.2,<2.4",
]

[project.optional-dependencies]
electrode-generation = [
  "maml",
]
matgl-dgl = [
  "dgl>=2.2.0",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
hrw = "hydrorelith.cli:main"
hrw-electrode-generate = "hydrorelith.pipelines.electrode_structure_generation:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
